# pyrig-fixtures

./: README.md  mkdocs.yml  prek.toml  pyproject.toml
.github/: configure.sh  settings.json
.github/workflows/: health_check.yml
docs/: api.md  index.md
src/pyrig_fixtures/: __init__.py
src/pyrig_fixtures/rig/: __init__.py
src/pyrig_fixtures/rig/cli/: __init__.py
src/pyrig_fixtures/rig/cli/commands/: __init__.py
src/pyrig_fixtures/rig/cli/commands/make/: __init__.py  fixture.py
src/pyrig_fixtures/rig/configs/: __init__.py  conftest.py
src/pyrig_fixtures/rig/tests/: __init__.py  conftest.py
src/pyrig_fixtures/rig/tests/fixtures/: __init__.py  cli.py  configs.py  environment.py  fixtures.py  modules.py  paths.py
src/pyrig_fixtures/rig/tests/fixtures/autouse/: __init__.py  session.py
tests/test_pyrig_fixtures/test_rig/test_cli/test_commands/test_make/: test_fixture.py
tests/test_pyrig_fixtures/test_rig/test_configs/: test_conftest.py
tests/test_pyrig_fixtures/test_rig/test_tests/: test_conftest.py
tests/test_pyrig_fixtures/test_rig/test_tests/test_fixtures/: test_cli.py  test_configs.py  test_environment.py  test_fixtures.py  test_modules.py  test_paths.py
tests/test_pyrig_fixtures/test_rig/test_tests/test_fixtures/test_autouse/: test_session.py
